--- a/mayikt/Netty/mayikt-socket/pom.xml
+++ b/mayikt/Netty/mayikt-socket/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.mayikt</groupId>
-    <artifactId>Socket</artifactId>
+    <artifactId>mayikt-socket</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
