--- a/mayikt/DesignPattern/创建型模式/Singleton/pom.xml
+++ b/mayikt/DesignPattern/创建型模式/Singleton/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>Singleton</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Singleton</name>
-    <description>Demo project for Spring Boot</description>
+    <description>单例模式</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
