--- a/mayikt/DesignPattern/结构型模式/Adapter/pom.xml
+++ b/mayikt/DesignPattern/结构型模式/Adapter/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>Adapter</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Adapter</name>
-    <description>Demo project for Spring Boot</description>
+    <description>适配器模式</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
