--- a/mayikt/DesignPattern/结构型模式/Proxy/pom.xml
+++ b/mayikt/DesignPattern/结构型模式/Proxy/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>Proxy</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Proxy</name>
-    <description>Demo project for Spring Boot</description>
+    <description>代理模式</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
