--- a/mayikt/DesignPattern/行为模式/ObServer/pom.xml
+++ b/mayikt/DesignPattern/行为模式/ObServer/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>ObServer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ObServer</name>
-    <description>Demo project for Spring Boot</description>
+    <description>观察者模式</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
