--- a/mayikt/DesignPattern/行为模式/Responsibility_chain/pom.xml
+++ b/mayikt/DesignPattern/行为模式/Responsibility_chain/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>Responsibility_chain</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Responsibility_chain</name>
-    <description>Demo project for Spring Boot</description>
+    <description>责任链模式</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
