--- a/mayikt/DesignPattern/行为模式/Strategy/pom.xml
+++ b/mayikt/DesignPattern/行为模式/Strategy/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>Strategy</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Strategy</name>
-    <description>Demo project for Spring Boot</description>
+    <description>策略模式</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
