--- a/mayikt/Collection/pom.xml
+++ b/mayikt/Collection/pom.xml
@@ -19,6 +19,14 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <!--<properties>
         <maven.compiler.source>8</maven.compiler.source>
