--- a/mayikt/Redis/redis01-jedis/pom.xml
+++ b/mayikt/Redis/redis01-jedis/pom.xml
@@ -16,10 +16,30 @@
     </properties>
 
     <dependencies>
+        <!--boot-web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!--boot-redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--redis客户端jedis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.8.0</version>
+        </dependency>
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+        </dependency>
+
+        <!--boot-test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -33,6 +53,7 @@
         </dependency>
     </dependencies>
 
+    <!--版本控制-->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -45,8 +66,10 @@
         </dependencies>
     </dependencyManagement>
 
+    <!--构建-->
     <build>
         <plugins>
+            <!--maven编译插件-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -57,6 +80,7 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <!--springboot打包插件-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
