--- a/mayikt/Redis/redis01-jedis/src/main/resources/application.properties
+++ b/mayikt/Redis/redis01-jedis/src/main/resources/application.properties
@@ -4,3 +4,21 @@ spring.application.name=redis01-jedis
 server.port=8080
 
 
+# Redis服务器连接主机
+spring.redis.host=82.156.210.141
+# Redis服务器连接端口
+spring.redis.port=6378
+# Redis服务器连接密码（默认为空）
+#spring.redis.password=xxxxxx
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=100
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=50
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=10
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=1000
+# 连接超时时间（毫秒）
+spring.redis.timeout=5000
+
+
