--- a/mayikt/Redis/redis01-jedis/src/main/resources/application.properties
+++ b/mayikt/Redis/redis01-jedis/src/main/resources/application.properties
@@ -3,13 +3,12 @@ spring.application.name=redis01-jedis
 # 应用服务 WEB 访问端口
 server.port=8080
 
-
 # Redis服务器连接主机
 spring.redis.host=82.156.210.141
 # Redis服务器连接端口
 spring.redis.port=6378
 # Redis服务器连接密码（默认为空）
-#spring.redis.password=xxxxxx
+spring.redis.password=123456
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.jedis.pool.max-active=100
 # 连接池中的最大空闲连接
