--- a/JavaBase/collection/pom.xml
+++ b/JavaBase/collection/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mayikt</groupId>
-    <artifactId>Collection</artifactId>
+    <artifactId>collection</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
